first circle positioned

--- a/pushButton.html
+++ b/pushButton.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="box1">
-            <div class="line-box">
-                <div class="line1"></div>
-                <div class="circle1"></div>
-                <div class="line2"></div>
+        <div class="line-box">
+            <div class="circle-one">
+                <div class="sub-circle">
+                    
+                </div>
             </div>
         </div>
     </div>
