Spac ship half created

--- a/spaceShip.html
+++ b/spaceShip.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="spaceshipe-body"></div>
+        <div class="space-ship-body-design">
+            <div class="spaceship-upper-body">
+                <div class="front-view"></div>
+            </div>
+            <div class="spaceshipe-body"></div>
+        </div>
     </div>
 </body>
 </html>
